[project]
name = "loopback"
version = "0.1.0"
description = "Two-tower neural recommender for music"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Regalado", email = "dxr1491@miami.edu" }]
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "torch>=2.3",
    "faiss-cpu>=1.8",
    "tqdm>=4.66",
    "requests>=2.31",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopback"]

[tool.ruff]
line-length = 100
